test/src/e2e_vm_tests/test_programs/should_fail/imports_implicitly_public/script/src/internal_mod/internal_submod.sw
library;

use external_mod::{*, external_submod::*};

pub fn internal_submod_foo() -> u32 {
    3
}
